Fixed contact form alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -37,7 +37,7 @@ input, textarea {
     bottom: 0;
     width: 50px;
     height: 50px;
-    z-index: 9999;
+    // z-index: 9999;
     animation: fadeOut 1s 1s;
     animation-fill-mode: forwards;
   }
